cmake_minimum_required(VERSION 3.27)
project(2023AOC)

set(CMAKE_CXX_STANDARD 23)

add_executable(2023AOC main.cpp
        src/Day1.cpp
        src/Day1.h
        src/Day2.cpp
        src/Day2.h
        src/Day3.cpp
        src/Day3.h
        src/Day4.cpp
        src/Day4.h
        src/Day5.cpp
        src/Day5.h
        src/Day6.cpp
        src/Day6.h
        src/Day7.cpp
        src/Day7.h
)